--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <b>
             <a href="ab.html">abaout</a>
             <a href="projec.html">game</a>
-            <a href="kol.html">Don't Open</a>
+    
+  
+            <a href="kol.html">GALLERY</a>
 
           </b>
         </div>
